@@ -2,5 +2,8 @@ Introduction
 ============
 
 Tests for rg.prenotazioni
+-------------------------
+
+All the tests pass ;)
 
     >>> pass
