@@ -39,6 +39,7 @@ setup(name='rg.prenotazioni',
       install_requires=['setuptools',
                         'Products.DataGridField',
                         'collective.contentrules.mailfromfield>=0.2.0',
+                        'pyinter',
                         'quintagroup.formlib.captcha',
                         ],
       tests_require=tests_require,
